# tomodorange

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  flake.nix  justfile  tomodorange.desktop  tomodorange.metainfo.xml  tomodorange.yaml
.ai-context/: overview.md
.github/workflows/: ci.yml  release.yml
src/: audio.rs  config.rs  main.py  main.rs
src/utils/: constants.py  startup_manager.py
tests/: test_ANH_73_about_dialog.py  test_ANH_73_integration.py  test_ANH_77_startup_manager.py
