[package]
name = "tomodorange"
version = "0.1.0"
edition = "2024"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic" }
tokio = { version = "1.43", features = ["rt", "time", "macros"] }








rodio = "0.20"
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "6.0"
once_cell = "1.20"
futures = "0.3"

[profile.release]
opt-level = "z"
lto = "full"
codegen-units = 1
strip = true
panic = "abort"
